# CLion_GTest_Example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  GTestExample.cpp  GTestExample.h
tests/: CMakeLists.txt  GTest_Example.cpp
